# dynamicvoronoi

./: .gitignore  CHANGELOG  CMakeLists.txt  README  README.md
img_no_prune/: final.ppm  initial.ppm  update_001.ppm  update_002.ppm  update_003.ppm  update_004.ppm  update_005.ppm  update_006.ppm  update_007.ppm  update_008.ppm  update_009.ppm  update_010.ppm
img_prune/: final.ppm  initial.ppm  update_001.ppm  update_002.ppm  update_003.ppm  update_004.ppm  update_005.ppm  update_006.ppm  update_007.ppm  update_008.ppm  update_009.ppm  update_010.ppm
img_pruneAlternative/: final.ppm  initial.ppm  update_001.ppm  update_002.ppm  update_003.ppm  update_004.ppm  update_005.ppm  update_006.ppm  update_007.ppm  update_008.ppm  update_009.ppm  update_010.ppm
include/: bucketedqueue.hxx  dynamicvoronoi.h
src/: CMakeLists.txt  dynamicvoronoi.cpp  example.cpp
